zoom buttons css fix

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -11183,3 +11183,23 @@ fieldset:disabled .btn {
 form div.mx-datepicker {
   width: 100%;
 }
+
+/* 
+
+#toolbarViewerMiddle .toolbarButton > span {
+  height: unset;
+  width: unset;
+} 
+
+#secondaryToolbarToggle > span {
+  height: unset;
+  width: unset;
+}
+
+*/
+
+#zoomOut > span,
+#zoomIn > span {
+  height: unset;
+  width: unset;
+}
